<resources>
    <string name="app_name">DietMemory</string>
    <string name="app_name_multiline">Diet\nMemory</string>

    <string name="sign_in">회원가입</string>
    <string name="withdrawal">회원탈퇴</string>
    <string name="name">이름</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="phone_number">전화번호</string>
    <string name="height">키</string>
    <string name="weight">몸무게</string>
    <string name="gender">성별</string>
    <string name="man">남성</string>
    <string name="woman">여성</string>
    <string name="age">나이</string>
    <string name="exercise_question">평균적으로 하루에 운동을 얼마나 하시나요?</string>
    <string name="check_use_calorie">칼로리 및 영양소 표시 기능을 사용할까요?</string>
    <string name="check_duplicate">중복확인</string>
    <string name="reset">재설정</string>
    <string name="clear">초기화</string>
    <string name="login">로그인</string>
    <string name="logout">로그아웃</string>
    <string name="next">다음</string>
    <string name="prev">이전</string>
    <string name="find_password">비밀번호 찾기</string>
    <string name="home">홈</string>
    <string name="calendar">달력</string>
    <string name="setting">설정</string>
    <string name="etc">기타</string>
    <string name="complete">완료</string>
    <string name="today_intake">오늘 먹은 음식들</string>
    <string name="water_intake">물 섭취량</string>
    <string name="search_exercise">운동 종류 살펴보기</string>
    <string name="search_intake_food">섭취한 음식 살펴보기</string>
    <string name="supplements">영양제</string>
    <string name="app_setting">앱 설정</string>
    <string name="physical_setting">신체 정보 관리</string>
    <string name="supplement_and_medicine">영양제 및 약품</string>
    <string name="restrict_food_setting">제한 음식 설정</string>
    <string name="add_supplement">+ 영양제 및 약품 추가</string>
    <string name="add_restrict_food">+ 제한 음식 추가</string>
    <string name="save">저장</string>
    <string name="cancel">취소</string>
    <string name="exercise_index">활동지수</string>
    <string name="use_calorie">칼로리, 영양소 표시 유무</string>
    <string name="change_unit">단위 변환</string>
    <string name="food">음식</string>
    <string name="exercise">운동</string>
    <string name="do_memo">기록하기</string>
    <string name="memo">기록</string>
    <string name="more">더보기</string>
    <string name="more_with_arrow">더보기\u1433</string>
    <string name="enter_food_name">음식 이름을 입력해주세요</string>
    <string name="enter_exercise">운동을 선택해주세요</string>
    <string name="category">분류</string>
    <string name="breakfast">아침</string>
    <string name="brunch">아점</string>
    <string name="lunch">점심</string>
    <string name="linner">점저</string>
    <string name="dinner">저녁</string>
    <string name="snack">간식</string>
    <string name="time">시간</string>
    <string name="total_consumption_calorie">총 소요 칼로리</string>
    <string name="today_consumption_calorie">오늘 소비한 칼로리</string>
    <string name="today_exercise">오늘 한 운동</string>

    <string name="yes">네</string>
    <string name="no">아니요</string>

    <string name="vertical_line">|</string>
    <string name="slash">/</string>

    <string name="set_goal_calorie">목표 칼로리 설정</string>
    <string name="calorie">칼로리</string>
    <string name="protein">단백질</string>
    <string name="fat">지방</string>
    <string name="carbohydrate">탄수화물</string>

    <string name="date_form_partial">%d년 %d월</string>
    <string name="date_form">%d년 %d월 %d일</string>
    <string name="value_scale_form">%d%s</string>
    <string name="with_line">- %s</string>
    <string name="intake_slash_target">%d/%d</string>
    <string name="form_nutrient_value">%s : %d / %d</string>
    <string name="form_count">%d번</string>

    <!-- exercise question 에 대한 응답 항목 -->
    <string name="exercise_answer1">30분 미만</string>
    <string name="exercise_answer2">30분~60분</string>
    <string name="exercise_answer3">60분~120분</string>
    <string name="exercise_answer4">120분 이상</string>

    <string name="calorie_per_10">10분당 %d</string>
    <string name="add_minute">%d분</string>

    <!-- 단위 표시 항목 목록 -->
    <string name="unit_type1">kg/ml</string>
    <string name="unit_type2">lbs/ml</string>
    <string name="unit_type3">kg/oz</string>
    <string name="unit_type4">lbs/oz</string>

    <string name="withdrawal_message">회원탈퇴를 원하시면\n"회원탈퇴"를 입력해주세요</string>

    <string name="calendar_hint">달력을 눌러 해당 날의 \n식단을 확인해보세요!</string>
    <string name="diet_empty">아직 기록된 식단이 없어요</string>
    <string name="diet_empty2">버튼을 눌러 식단을 올려보세요</string>
    <string name="exercise_empty">아직 기록된 운동이 없어요</string>
    <string name="exercise_empty2">버튼을 눌러 운동을 기록해보세요</string>

    <!-- 식사메뉴 추천 관련 -->
    <string name="recommand_food">저녁식사로 이건 어떠세요?</string>

    <!-- 약품 추가 bottom sheet -->
    <string name="write_supplement_name">추가할 영양제/약품의 이름을 입력해주세요</string>
    <string name="confirm">확인</string>

    <!-- 왜 있는지 모를 contentDescription 용 -->
    <string name="contextDescription_main_btn_add">음식, 운동과 같은 데이터를 추가할 때 사용합니다.</string>

    <!-- 아직 제공 안되는 기능에 표시될 메세지 -->
    <string name="not_ready_yet">추후 지원될 기능입니다</string>
</resources>