<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/bottom_home"
        android:title="@string/home"
        android:icon="@drawable/ic_baseline_home"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/bottom_calendar"
        android:title="@string/calendar"
        android:icon="@drawable/ic_baseline_calendar"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/bottom_empty"
        android:title=""
        android:enabled="false"
        android:checked="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/bottom_setting"
        android:title="@string/setting"
        android:icon="@drawable/ic_baseline_settings"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/bottom_exercise"
        android:title="@string/exercise"
        android:icon="@drawable/exercise"
        app:showAsAction="ifRoom"/>
</menu>