<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_logo"
        android:layout_width="96dp"
        android:layout_height="96dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="112dp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iv_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/email"
        android:layout_margin="32dp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_email"
        app:layout_constraintStart_toStartOf="@id/et_email"
        app:layout_constraintEnd_toEndOf="@id/et_email"
        android:hint="@string/password"
        android:layout_marginTop="16dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_find_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_vertical_line"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginTop="16dp"
        android:textSize="12sp"
        android:text="@string/find_password"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_vertical_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/btn_find_password"
        app:layout_constraintEnd_toStartOf="@id/btn_sign_in"
        app:layout_constraintTop_toTopOf="@id/btn_find_password"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:textSize="12sp"
        android:text="@string/vertical_line"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/btn_find_password"
        app:layout_constraintStart_toEndOf="@id/tv_vertical_line"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="12sp"
        android:text="@string/sign_in"/>

</androidx.constraintlayout.widget.ConstraintLayout>