<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_begin="16dp"
        android:orientation="vertical"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_end="16dp"
        android:orientation="vertical"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_check_calorie"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toStartOf="@id/switch_calorie"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/check_use_calorie"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_calorie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintTop_toTopOf="@id/tv_check_calorie"
        app:layout_constraintBottom_toBottomOf="@id/tv_check_calorie"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_exercise_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exercise_question"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toBottomOf="@id/tv_check_calorie"
        android:layout_marginTop="32dp"/>

    <RadioGroup
        android:id="@+id/rg_exercise_question"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintTop_toBottomOf="@id/tv_exercise_question"
        android:clickable="false"
        android:layout_marginTop="8dp">

        <RadioButton
            android:id="@+id/radio_exercise_question1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:text="@string/exercise_answer1"/>

        <RadioButton
            android:id="@+id/radio_exercise_question2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:text="@string/exercise_answer2"/>

        <RadioButton
            android:id="@+id/radio_exercise_question3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:text="@string/exercise_answer3"/>

        <RadioButton
            android:id="@+id/radio_exercise_question4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:text="@string/exercise_answer4"/>
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>