<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_begin="0dp"
            android:orientation="vertical"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_end="0dp"
            android:orientation="vertical"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_food_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/guide_start"
            app:layout_constraintEnd_toEndOf="@id/guide_end"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:hint="@string/enter_food_name"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            app:layout_constraintTop_toTopOf="@id/iv_photo"
            app:layout_constraintBottom_toBottomOf="@id/iv_photo"
            app:layout_constraintStart_toStartOf="@id/guide_start"
            app:layout_constraintEnd_toEndOf="@id/guide_end"
            android:src="@drawable/ic_baseline_camera"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_photo"
            android:layout_width="0dp"
            android:layout_height="336dp"
            app:layout_constraintTop_toBottomOf="@id/et_food_name"
            app:layout_constraintStart_toStartOf="@id/guide_start"
            app:layout_constraintEnd_toEndOf="@id/guide_end"
            android:layout_marginTop="16dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/iv_photo"
            app:layout_constraintStart_toStartOf="@id/guide_start"
            android:layout_marginTop="16dp"
            android:text="@string/category"/>

        <HorizontalScrollView
            android:id="@+id/layout_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/guide_start"
            app:layout_constraintEnd_toEndOf="@id/guide_end"
            app:layout_constraintTop_toBottomOf="@id/tv_category"
            android:layout_marginTop="16dp">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/cg_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:singleSelection="true"
                app:singleLine="true">

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/breakfast"
                    android:checked="true"
                    style="@style/FoodCategoryChip"
                    android:minHeight="0dp"/>

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/brunch"
                    style="@style/FoodCategoryChip"
                    android:minHeight="0dp"/>

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lunch"
                    style="@style/FoodCategoryChip"
                    android:minHeight="0dp"/>

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/linner"
                    style="@style/FoodCategoryChip"
                    android:minHeight="0dp"/>

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dinner"
                    style="@style/FoodCategoryChip"
                    android:minHeight="0dp"/>

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/snack"
                    style="@style/FoodCategoryChip"
                    android:minHeight="0dp"/>

            </com.google.android.material.chip.ChipGroup>


        </HorizontalScrollView>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_nutrients"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/guide_start"
            app:layout_constraintEnd_toEndOf="@id/guide_end"
            app:layout_constraintTop_toBottomOf="@id/layout_category"
            android:layout_marginTop="16dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_calorie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@id/et_calorie"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="8dp"
                android:text="@string/calorie"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_calorie"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/tv_calorie"
                app:layout_constraintEnd_toStartOf="@id/tv_carbohydrate"
                app:layout_constraintTop_toTopOf="@id/tv_calorie"
                app:layout_constraintBottom_toBottomOf="@id/tv_calorie"
                android:background="@android:color/transparent"
                android:textSize="14sp"
                tools:text="2500"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_carbohydrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/et_calorie"
                app:layout_constraintEnd_toStartOf="@id/et_carbohydrate"
                app:layout_constraintTop_toTopOf="@id/tv_calorie"
                app:layout_constraintBottom_toBottomOf="@id/tv_calorie"
                android:layout_marginEnd="8dp"
                android:text="@string/carbohydrate"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_carbohydrate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                app:layout_constraintStart_toEndOf="@id/tv_carbohydrate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_calorie"
                app:layout_constraintBottom_toBottomOf="@id/tv_calorie"
                android:textSize="14sp"
                tools:text="650"/>

            <!-- -->

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_protein"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@id/et_protein"
                app:layout_constraintStart_toStartOf="@id/tv_calorie"
                app:layout_constraintEnd_toEndOf="@id/tv_calorie"
                app:layout_constraintTop_toBottomOf="@id/tv_calorie"
                android:layout_marginEnd="8dp"
                android:text="@string/protein"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_protein"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/et_calorie"
                app:layout_constraintEnd_toEndOf="@id/et_calorie"
                app:layout_constraintTop_toTopOf="@id/tv_protein"
                app:layout_constraintBottom_toBottomOf="@id/tv_protein"
                android:background="@android:color/transparent"
                android:textSize="14sp"
                tools:text="500"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_fat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/tv_carbohydrate"
                app:layout_constraintTop_toTopOf="@id/tv_protein"
                app:layout_constraintBottom_toBottomOf="@id/tv_protein"
                android:layout_marginEnd="8dp"
                android:text="@string/fat"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_fat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                app:layout_constraintStart_toStartOf="@id/et_carbohydrate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_protein"
                app:layout_constraintBottom_toBottomOf="@id/tv_protein"
                android:textSize="14sp"
                tools:text="700"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.core.widget.NestedScrollView>