<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_begin="16dp"
        android:orientation="vertical"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_end="16dp"
        android:orientation="vertical"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/supplement_and_medicine"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        android:textColor="@color/dark_green"
        android:textSize="18sp"
        android:layout_marginTop="16dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintTop_toTopOf="@id/tv_title"
        android:text="@string/save"
        android:textColor="@color/dark_green"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textColor="@color/orange"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toStartOf="@id/btn_save"
        app:layout_constraintTop_toTopOf="@id/tv_title"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_supplement"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        android:layout_marginTop="16dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_add_supplement"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintTop_toBottomOf="@id/rv_supplement"
        android:layout_marginTop="16dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:background="@color/light_green"
        android:text="@string/add_supplement"/>

</androidx.constraintlayout.widget.ConstraintLayout>