<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:padding="16dp"
    >

    <TextView
        android:id="@+id/tv_withdrawal_msg"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/withdrawal_message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/et_withdrawal"
        android:layout_width="250dp"
        android:layout_height="36dp"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@id/tv_withdrawal_msg"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:importantForAutofill="no"
        android:inputType="text"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/btn_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_withdrawal"
        app:layout_constraintTop_toBottomOf="@id/et_withdrawal"
        android:layout_marginTop="16dp"
        android:text="@string/cancel"
        android:textColor="@color/dark_green"/>

    <TextView
        android:id="@+id/btn_withdrawal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@id/btn_cancel"
        app:layout_constraintStart_toEndOf="@id/btn_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/withdrawal"
        android:textColor="@color/gray"/>

</androidx.constraintlayout.widget.ConstraintLayout>